--- a/mainDefence/main.tex
+++ b/mainDefence/main.tex
@@ -15,12 +15,15 @@
 \usepackage{graphicx}
 \usepackage{longtable}
 \usepackage[usenames,dvipsnames]{color} % названия цветов
+\renewcommand{\rmdefault}{ftm} % Times New Roman
+\usepackage[T2A]{fontenc}
 \usepackage[utf8]{inputenc}
-\usepackage[english,russian]{babel}
+\usepackage[russian]{babel}
 
 \renewcommand{\labelitemi}{–}
 \renewcommand{\labelenumii}{\theenumii}
 \renewcommand{\theenumii}{\theenumi.\arabic{enumii}.}
+\setlist{nolistsep}
 
 \setcounter{secnumdepth}{4}
 \titleformat{\paragraph}
@@ -28,9 +31,22 @@
 \titlespacing*{\paragraph}
 {0pt}{3.25ex plus 1ex minus .2ex}{1.5ex plus .2ex}
 
-\setlist[enumerate,itemize]{leftmargin=0pt,itemindent=2.7em}
+\usepackage{chngcntr}
+\counterwithin{figure}{section}
+\counterwithin{table}{section}
+\renewcommand{\thefigure}{\thesection.\arabic{figure}} % Формат рисунка секция.номер
+\renewcommand{\thetable}{\thesection.\arabic{table}} % Формат таблицы секция.номер
+\numberwithin{equation}{section}
 
 \usepackage[tableposition=top]{caption}
+\captionsetup[table]{
+  labelsep = newline,
+  textfont = sc, 
+  name = TABLE, 
+  justification=justified,
+  singlelinecheck=false,%%%%%%% a single line is centered by default
+  labelsep=colon,%%%%%%
+  skip = \medskipamount}
 \usepackage{subcaption}
 \DeclareCaptionLabelFormat{gostfigure}{Рисунок #2}
 \DeclareCaptionLabelFormat{gosttable}{Таблица #2}
@@ -40,10 +56,14 @@
 \captionsetup[table]{labelformat=gosttable}
 \renewcommand{\thesubfigure}{\asbuk{subfigure}}
 
+\newcommand{\TT}[2]{\text{\textit{#1}}_\text{\textit{#2}}}
+
 \linespread{1.3}
+\parindent=1.25cm
+\setlist[enumerate,itemize]{itemindent=1.7cm, leftmargin=0cm}
 \renewcommand{\rmdefault}{ftm}
 \usepackage[left=20mm, top=15mm, right=15mm, bottom=15mm, nohead, footskip=10mm]{geometry}
-% \setlength{\parskip}{0.5cm}
+\setlength{\parskip}{1.5pt}
 \usepackage{ragged2e}
 \justifying
 \sloppy
@@ -53,9 +73,9 @@
 \setcounter{page}{8}
 
 \lstset{
-	basicstyle=\ttfamily,
+	basicstyle=\small\ttfamily,
     columns=fullflexible,
-    frame=single,
+    % frame=single,
     breaklines=true,
 }
 
@@ -82,7 +102,6 @@
 \addcontentsline{toc}{subsection}{Определения, обозначения и сокращения}
 \begin{table}[H]
 \caption{Сокращения}
-\centering
   \begin{tabular}{|c|c|c|}
   \hline
   №  & Сокращение & Расшифровка \\\hline
@@ -124,26 +143,28 @@
 Представляемая подсистема создана для узкоспециализированной задачи и использования только в рамках программного продукта «Web-Исполнение бюджета».\par
 При изучении рынка специализированного ПО было выявлено, что аналогичные «Web-Исполнению бюджета» системы так же используют подобный функционал. В большинстве этих систем используются комерческие приложения крупных компаний, таких, как Microsoft, Oracle, cluvio и других.\par
 Oracle Data Visualization Cloud Service, Microsoft Excel Online и cluvio - это платные коммерческие приложения, которые требуют не разовую оплату продукта, а распространяются по системе подписки.
-\begin{longtable}[H]{|p{0.2\textwidth}|p{0.4\textwidth}|p{0.4\textwidth}|}
+\begin{longtable}[H]{|p{0.2\textwidth}|p{0.35\textwidth}|p{0.35\textwidth}|}
   \caption{Преимущества и недостатки аналогов}
-  \label{table3} \\\hline
+  \label{tableAnalog} \\\hline
   Технология & Преимущества & Недостатки \\\hline
   Oracle Data Visualization Cloud Service &
-  	— Облачный сервис
+  	- Облачный сервис
   &
-  	— поддерживает только базу Oracle
-  \\\hline
+  	- поддерживает только базу Oracle
+  \\
+  \multicolumn{3}{l}{}\\
+  \caption*{Продолжение таблицы \ref{tableAnalog}} \\\hline
   Microsoft Excel Online &
-  	— Облачный сервис
+  	- Облачный сервис
   &
-  	— работает только с форматом .xls и .xlsx \newline
-    — только стандартные пресеты системы Microsoft Excel
+  	- работает только с форматом .xls и .xlsx \newline
+    - только стандартные пресеты системы Microsoft Excel
   \\\hline
   cluvio &
-  	— Облачный сервис \newline
-    — Большое количество пресетов для графиков и диаграмм
+  	- Облачный сервис \newline
+    - Большое количество пресетов для графиков и диаграмм
   &
-  	— платный сервис, распространяемый по системе подписки
+  	- платный сервис, распространяемый по системе подписки
   \\\hline
 \end{longtable}\par
 
@@ -158,7 +179,7 @@ Oracle Data Visualization Cloud Service, Microsoft Excel Online и cluvio - эт
 
 \paragraph{Перечень документов, на основании которых создается подсистема, кем и когда утверждены эти документы}
 Основанием для разработки "Планировщик выполнения заданий по расписанию" являются следующие документы и нормативные акты:\par
-Задание на дипломный проект (приказ №    от    )
+Задание на дипломный проект (приказ № 500-04 от 30.11.2016)
 
 \paragraph{Плановые сроки начала и окончания работы по созданию подсистемы}
 Плановый срок начала работ по созданию "Планировщик выполнения заданий по расписанию" – 15 апреля 2017 года. Плановый срок окончания работ по созданию "Планировщик выполнения заданий по расписанию" – 15 июня 2017 года.
@@ -361,15 +382,11 @@ Oracle Data Visualization Cloud Service, Microsoft Excel Online и cluvio - эт
     \item Следующим этапом будет создание нового объекта визуализации на интерфейсе Администратор отчетов. Там выбираются шаблон, источник данных, на основании которых будет строится визуализация и указываются нужные параметры визуализации.
     \item После создания объекта визуализации его можно выполнить на интерфейсе Отчеты. Как и на интерфейса Администратор отчетов, здесь можно править шаблон визуализации с помощью Редактора шаблонов.
 \end{itemize}\par
-Диаграммы вариантов использования подсистемы построения аналитических отчетов до внедрения подсистемы визуализации аналитических отчетов и после ее внедрения представлены на рисунках (\hyperref[ris1]{Рисунок 1} и \hyperref[ris2]{Рисунок 2}).
-\begin{figure}[H]
-\center{\includegraphics[width=17cm]{./imgs/1.png}}
-\caption{Диаграмма вариантов использования до внедрения разрабатываемой подсистемы}
-\label{ris1}
-\end{figure}\par
+Диаграммы вариантов использования подсистемы построения аналитических отчетов до внедрения подсистемы визуализации аналитических отчетов и после ее внедрения представлены на рисунке (Рисунок \ref{ris2}).
 \begin{figure}[H]
 \center{\includegraphics[width=17cm]{./imgs/2.png}}
-\caption{Диаграмма вариантов использования после внедрения разрабатываемой подсистемы}
+\centering
+\caption{Схема бизнес-логики разрабатываемой подсистемы}
 \label{ris2}
 \end{figure}\par
 
@@ -450,7 +467,7 @@ D3.js (название D3 расшифровывается как data driven d
 \end{itemize}\par
 
 \subsubsection{Структура программы (модули, классы)}
-Структура разработанной подсистемы визуализации аналитических источников представленна на рисунках \hyperref[umlClassDiagram:ris1]{Рисунок 3} и \hyperref[umlClassDiagram:ris2]{Рисунок 4}.
+Структура разработанной подсистемы визуализации аналитических источников представленна на рисунках (Рисунок \ref{umlClassDiagram:ris1} и Рисунок \ref{umlClassDiagram:ris2}).
 \begin{figure}[H]
 \center{\includegraphics[width=17cm]{./imgs/FullDiagramDesigner.png}}
 \caption{UML-диаграмма классов разрабатываемой подсистемы}
@@ -490,17 +507,18 @@ D3.js (название D3 расшифровывается как data driven d
 Целью испытаний является проверка корректности работы тех функциональных частей продукта, которые полностью реализованы в процессе  работы.\par
 
 \subsubsection{Требования к программе}
-Большинство требований предъявленных к системе являются качественными, а не количественными, вследствие чего их проверка не требует особых усилий. Перечислим требования в таблице \hyperref[table3]{3}.\par
+Большинство требований предъявленных к системе являются качественными, а не количественными, вследствие чего их проверка не требует особых усилий. Перечислим требования в таблице (Таблица \ref{tableTreb}).\par
 \begin{longtable}[H]{|c|p{0.3\textwidth}|p{0.3\textwidth}|p{0.3\textwidth}|}
   \caption{Требования к программе}
-  \label{table3}\\
+  \label{tableTreb}\\
   \hline
   №  & Требование & Способ оценки & Примечание \\\hline
   \endfirsthead
   1  & Проверка корректности преобразования аналитического источника данных в JSON-объект & Запуск системы в режиме отладки в месте преобразования аналитического источника данных в JSON-объект & Под режимом отладки понимается постановка точки останова в нужном месте и запуск выполнения системы в пошаговом режиме, начиная с установленной точки останова\\\hline
   2  & Проверка корректности создания объекта визуализации в интерфейсе Администратор отчетов & В интерфейса администратор отчетов создать документ, выбрать заполненный шаблон и соответствующий визуализации формат отчета & \\\hline
-  \pagebreak\hline
-  3  & Проверка корректности заполнения формы Редактора шаблона (проверка на обязательность заполнения всех полей) & Запустить Редактор шаблона с интерфейса Администратор отчетов и проверить все поля на обязательное заполнение & \\\hline
+  3  & Проверка корректности заполнения формы Редактора шаблона (проверка на обязательность заполнения всех полей) & Запустить Редактор шаблона с интерфейса Администратор отчетов и проверить все поля на обязательное заполнение & \\
+  \multicolumn{4}{l}{}\\\multicolumn{4}{l}{}\\\multicolumn{4}{l}{}\\\multicolumn{4}{l}{}\\
+  \caption*{Продолжение таблицы \ref{tableTreb}} \\\hline
   4  & Проверка корректности исполнения фрагмента кода, отвечающего за сбор пользовательских параметров & Запуск системы в режиме отладки в месте сбора пользовательских параметров & \\\hline
   5  & Проверка корректности объединения двух JSON-объектов (собранные пользовательские параметры и аналитичский источник данных) & Запуск системы в режиме отладки в месте объединения двух JSON-объектов & \\\hline
   6  & Проверка корректнного отображения визуализации в соответствии с заполненным шаблоном, пользовательскими параметрами и аналитическим источников & Выполнение созданной и заполненной визуализации на интерфейса Отчеты & Имеется в виду выполнение в качестве пользователя, а не системного программиста, то есть нажатие кнопки Выполнить на интерфейса Отчеты\\\hline
@@ -510,7 +528,7 @@ D3.js (название D3 расшифровывается как data driven d
 \subsubsection{Методика испытаний}
 \begin{longtable}[H]{|c|p{0.45\textwidth}|p{0.45\textwidth}|}
   \caption{Методика испытаний}
-  \label{table3} \\\hline
+  \label{tableMetod} \\\hline
   №  & Требование & Способ оценки \\\hline
   \multicolumn{3}{|c|}{Проверка корректности работы подсистемы на web-интерфейсе} \\\hline
   1  & Вводимые данные: создание объекта визуализации на интерфейсе Администратор отчетов & Корректное создание объекта без ошибок \\\hline
@@ -519,9 +537,10 @@ D3.js (название D3 расшифровывается как data driven d
   4  & Вводимые данные: создание аналитического источника во вкладке Источники данных в детализации интерфейса Аналитические источники данных & Корректное создание и добавление объекта на интерфейс \\\hline
   \multicolumn{3}{|c|}{Проверка корректности работы подсистемы на стороне сервера} \\\hline
   5  & Вводимые данные: проверка корректности преобразования аналитического источника данных в JSON-объект & JSON-объект с идентичными исходному аналитическому источнику полями \\\hline
-  6  & Вводимые данные: проверка корректности исполнения фрагмента кода, отвечающего за сбор пользовательских параметров & Набор java-объектов со значениями соответствующими выбираемым пользовательским параметрам \\\hline
+  6  & Вводимые данные: проверка корректности исполнения фрагмента кода, отвечающего за сбор пользовательских параметров & Набор java-объектов со значениями соответствующими выбираемым пользовательским параметрам \\
+  \multicolumn{3}{l}{}\\\multicolumn{3}{l}{}\\
+  \caption*{Продолжение таблицы \ref{tableMetod}} \\\hline
   7  & Вводимые данные: проверка корректности объединения двух JSON-объектов (собранные пользовательские параметры и аналитичский источник данных) & JSON-объект с идентичными исходному аналитическому источнику и пользовательским параметрам полями \\\hline
-
 \end{longtable}\par
 
 \section{Эксплуатационная документация}
@@ -550,7 +569,7 @@ D3.js (название D3 расшифровывается как data driven d
 Подсистема визуализации аналитических отчетов интегрирована в систему "Web-Исполнение бюджета", поэтому для использования подсистемы необходим доступ к системе с правами администратора. Работа системного программиста по управлению подсистемой происходит следующим образом:
 \begin{itemize}
 	\item Для начала необходимо создать Аналитический источник данных.\par
-	Создание аналитического источника начинается с указания наименования аналитического источника (\hyperref[ris3_1]{Рисунок 5}). Далее следует сохранить документ нажатием кнопки "Принять изменения" в виде галочки на верхней панели кнопок. Далее выбрается Идентификатор данных - это модель данных, из которой будет происходить выборка данных. Добавление происходит в детализации интерфейса Аналитические источники данных во вкладке Секции (\hyperref[ris3_2]{Рисунок 6}). Затем в новый аналитический источник добавляются колонки из модели данных, которые будут использоваться при формировании данных для отчета, для этого следует перейти на вкладку Колонки в детализации интерфейса Аналитические источники данных (\hyperref[ris3_3]{Рисунок 7}). После добавления колонок требуется написать события, которые будут отвечать за содержание данных во время подготовки параметров (событие На подготовку параметров), после закачки данных (событие После закачки) после формирования данных, это делается в самом интерфейса, в его заголовочной части (\hyperref[ris3_1]{Рисунок 5}).
+	Создание аналитического источника начинается с указания наименования аналитического источника (Рисунок \ref{ris3_1}). Далее следует сохранить документ нажатием кнопки "Принять изменения" в виде галочки на верхней панели кнопок. Далее выбрается Идентификатор данных - это модель данных, из которой будет происходить выборка данных. Добавление происходит в детализации интерфейса Аналитические источники данных во вкладке Секции (Рисунок \ref{ris3_2}). Затем в новый аналитический источник добавляются колонки из модели данных, которые будут использоваться при формировании данных для отчета, для этого следует перейти на вкладку Колонки в детализации интерфейса Аналитические источники данных (Рисунок \ref{ris3_3}). После добавления колонок требуется написать события, которые будут отвечать за содержание данных во время подготовки параметров (событие На подготовку параметров), после закачки данных (событие После закачки) после формирования данных, это делается в самом интерфейса, в его заголовочной части (Рисунок \ref{ris3_1}).
 \begin{figure}[H]
 \center{\includegraphics[width=17cm]{./imgs/3_1.png}}
 \caption{Интерфейс создания Аналитического источника данных}
@@ -563,27 +582,27 @@ D3.js (название D3 расшифровывается как data driven d
 \end{figure}\par
 \begin{figure}[H]
 \center{\includegraphics[width=17cm]{./imgs/3_3.png}}
-\caption{Вкладка Колонки детализации Аналитического источника данных}
+\caption{Вкладка Колонки детализации Аналитического источника}
 \label{ris3_3}
 \end{figure}\par
-	\item Далее создается шаблон визуализации в формате .template. Это делается на интерфейсе Администратор отчетов (\hyperref[ris4_1]{Рисунок 8}). Созданный шаблон можно редактировать на этом же интерфейсе в Редакторе шаблонов (вторая кнопка слева на верхней панель кнопок), где можно выбрать наименование диаграммы, наличие на диаграмме легенды, вид диаграммы и наименование осей (\hyperref[ris5]{Рисунок 9}).
+	\item Далее создается шаблон визуализации в формате .template. Это делается на интерфейсе Администратор отчетов (Рисунок \ref{ris4_1}). Созданный шаблон можно редактировать на этом же интерфейсе в Редакторе шаблонов (вторая кнопка слева на верхней панель кнопок), где можно выбрать наименование диаграммы, наличие на диаграмме легенды, вид диаграммы и наименование осей (Рисунок \ref{ris5}).
 \begin{figure}[H]
 \center{\includegraphics[width=17cm]{./imgs/5.png}}
-\caption{Редактор шаблонов на интерфейсах Администратор отчетов и Отчеты}
+\caption{Редактор шаблонов на интерфейсе Администратор отчетов}
 \label{ris5}
 \end{figure}\par
 \begin{figure}[H]
 \center{\includegraphics[width=17cm]{./imgs/4_1.png}}
-\caption{Интерфейс создания Аналитического отчета с кнопкой «Новый шаблон»}
+\caption{Интерфейс создания Аналитического отчета}
 \label{ris4_1}
 \end{figure}\par
-    \item Следующим этапом будет создание нового объекта визуализации на интерфейсе Администратор отчетов. Здесь указывается Наименование объекта, выбираются шаблон, созданный ранее и формат отчета (d3\_diagram для объекта визуализации). Далее, в детализации интерфейса Администратор отчетов (\hyperref[ris4_2]{Рисунок 10}), указывается источник данных, созданный ранее, на основании которого будет строится визуализация и указываются нужные параметры визуализации.
+    \item Следующим этапом будет создание нового объекта визуализации на интерфейсе Администратор отчетов. Здесь указывается Наименование объекта, выбираются шаблон, созданный ранее и формат отчета (d3\_diagram для объекта визуализации). Далее, в детализации интерфейса Администратор отчетов (Рисунок \ref{ris4_2}), указывается источник данных, созданный ранее, на основании которого будет строится визуализация и указываются нужные параметры визуализации.
 \begin{figure}[H]
 \center{\includegraphics[width=12cm]{./imgs/4_2.png}}
 \caption{Детализация интерфейса создания Аналитического отчета}
 \label{ris4_2}
 \end{figure}\par
-    \item После создания объекта визуализации его можно выполнить на интерфейсе Отчеты нажав кнопку Выполнить в верхней панели кнопок (\hyperref[ris6]{Рисунок 11}). Здесь, как и на интерфейсе Администратор отчетов можно править шаблон визуализации с помощью Редактора шаблонов.
+    \item После создания объекта визуализации его можно выполнить на интерфейсе Отчеты нажав кнопку Выполнить в верхней панели кнопок (Рисунок \ref{ris6}). Здесь, как и на интерфейсе Администратор отчетов можно править шаблон визуализации с помощью Редактора шаблонов.
 \begin{figure}[H]
 \center{\includegraphics[width=12cm]{./imgs/6.png}}
 \caption{Интерфейс Отчеты}
@@ -612,7 +631,7 @@ D3.js (название D3 расшифровывается как data driven d
 Для функционирования модуля необходима актуальная версия браузера Mozilla Firefox, Yandex Browser или Google Chrome (с поддержкой JavaScript версии ECMAScript 6 и старше). JavaScript-библиотека jQuery версии 3.1 и старше. JavaScript-библиотека D3.js версии 4.8.0 и старше. При использовании ЭП - криптографическое ПО.
 
 \subsubsection{Работа с подсистемой}
-Обычные пользователи, которые не имеют прав администратора в системе, имеют доступ только к интерфейсу Отчеты, в котором у них нет прав реактировать шаблон визуализации. Пользователи без прав администратора могут только Выполнять построение визуализации, нажав на кнопку Выпонить в верхней панели кнопок интерфейса Отчеты (\hyperref[ris7]{Рисунок 12}).
+Обычные пользователи, которые не имеют прав администратора в системе, имеют доступ только к интерфейсу Отчеты, в котором у них нет прав реактировать шаблон визуализации. Пользователи без прав администратора могут только Выполнять построение визуализации, нажав на кнопку Выпонить в верхней панели кнопок интерфейса Отчеты (Рисунок \ref{ris7}).
 \begin{figure}[H]
 \center{\includegraphics[width=10cm]{./imgs/7.png}}
 \caption{Интерфейс Отчеты для пользователя без прав администратора}
@@ -628,6 +647,24 @@ D3.js (название D3 расшифровывается как data driven d
 \subsection{Цель испытаний}
 Целью испытаний является проверка корректности работы тех функциональных частей продукта, которые полностью реализованы в процессе  работы.\par
 \subsection{Выводы}
+\begin{longtable}[H]{|c|p{0.3\textwidth}|p{0.3\textwidth}|p{0.3\textwidth}|}
+  \caption{Результаты испытаний}
+  \label{table3} \\\hline
+  №  & Требование & Способ оценки & Результат испытаний \\\hline
+  \multicolumn{4}{|c|}{Проверка корректности работы подсистемы на web-интерфейсе} \\\hline
+  1  & Вводимые данные: создание объекта визуализации на интерфейсе Администратор отчетов & Корректное создание объекта без ошибок & Требование выполнено\\\hline
+  2  & Вводимые данные: создание аналитического источника на интерфейсе Аналитические источники данных & Корректное создание объекта без ошибок & Требование выполнено \\
+  \multicolumn{4}{l}{}\\
+  \caption*{Продолжение таблицы \ref{table3}} \\\hline
+  3  & Вводимые данные: добавление созданного аналитического источника во вкладку Источники данных в детализации интерфейса Аналитические источники данных & Корректное добавление объекта на интерфейс & Требование выполнено \\\hline
+  4  & Вводимые данные: создание аналитического источника во вкладке Источники данных в детализации интерфейса Аналитические источники данных & Корректное создание и добавление объекта на интерфейс & Требование выполнено \\\hline
+  \multicolumn{4}{|c|}{Проверка корректности работы подсистемы на стороне сервера} \\\hline
+  5  & Вводимые данные: проверка корректности преобразования аналитического источника данных в JSON-объект & JSON-объект с идентичными исходному аналитическому источнику полями & Требование выполнено \\\hline
+  6  & Вводимые данные: проверка корректности исполнения фрагмента кода, отвечающего за сбор пользовательских параметров & Набор java-объектов со значениями соответствующими выбираемым пользовательским параметрам & Требование выполнено \\
+  \multicolumn{4}{l}{}\\
+  \caption*{Продолжение таблицы \ref{table3}} \\\hline
+  7  & Вводимые данные: проверка корректности объединения двух JSON-объектов (собранные пользовательские параметры и аналитичский источник данных) & JSON-объект с идентичными исходному аналитическому источнику и пользовательским параметрам полями & Требование выполнено \\\hline
+\end{longtable}\par
 Испытания подсистемы производили
 \begin{itemize}
 \item разработчик Ляпушкин Н. А.
@@ -685,14 +722,14 @@ Oracle Data Visualization Cloud Service, Microsoft Excel Online и cluvio - эт
 Размер основной заработной платы (ОЗП) определяется окладом инженера-программиста, количеством разработчиков и сроками разработки:\par
 \begin{equation}
 \label{form1}
-	\text{ОЗП} = \text{СЗП}\times T
+	\text{\textit{ОЗП}} = \TT{СЗП}{}\times T
 \end{equation}\newline
 где\par
 СЗП – стандартная заработная плата (16500 руб.)\par
 T – число месяцев разработки (3 месяцев).\par
 \begin{equation}
 \label{form2}
-	\text{ОЗП} = 16500\times 3
+	\textit{ОЗП} = 16500\times 3
 \end{equation}\par
 Размер  ОЗП = 49500 руб.
 
@@ -706,76 +743,76 @@ T – число месяцев разработки (3 месяцев).\par
 Суммарный процент социальных отчислений $C_o$ составляет $22\% + 2,9\% + 5,1\%$. Соответственно, размер социальных отчислений предриятия на заработную плату равенн:
 \begin{equation}
 \label{form3}
-	\text{О}_\text{соц} = \text{ЗП}\times C_o = \text{ЗП}\times 30\%
+	\textit{О}_\textit{соц} = \textit{ЗП}\times C_o = \textit{ЗП}\times 30\%
 \end{equation}\par
-Получаем, что $\text{О}_\text{соц}$ = 14850 (руб.)\par
+Получаем, что $\textit{О}_\textit{соц}$ = 14850 (руб.)\par
 Сумма затрат предприятия на заявленную заработную плату работников составляет:
 \begin{equation}
 \label{form4}
-	\text{Р}_\text{ЗП}=\text{ЗП}\times(1+C_o)
+	\textit{Р}_\textit{ЗП}=\textit{ЗП}\times(1+C_o)
 \end{equation}
 
 \begin{equation}
 \label{form5}
-	\text{Р}_\text{ЗП}=49500\times(1+0,3)
+	\textit{Р}_\textit{ЗП}=49500\times(1+0,3)
 \end{equation}\par
 
 \subsubsection{Затраты на машинное время}
 Расходы на машинное время с учетом наличия 246 дней в году определяются по формуле:\par
 \begin{equation}
 \label{form6}
-	\text{Мвр}=\text{Счмв}\times \text{ВР}_\text{м}
+	\textit{Мвр}=\textit{Счмв}\times \textit{ВР}_\textit{м}
 \end{equation}
-где $\text{М}_\text{вр}$ – расходы на машинное время, руб.;\par
+где $\textit{М}_\textit{вр}$ – расходы на машинное время, руб.;\par
 Счмв – стоимость одного часа машинного времени, руб./час;\par
 ВРм – время использования ЭВМ для разработки программного продукта, час.\par
 Стоимость одного часа машинного времени можно рассчитать по формуле:\par
 \begin{equation}
 \label{form7}
-	\text{Счмв}=\frac{\text{Цк}}{\text{Ссл}\times 246\times \text{Вэд}}+\text{РЭ}
+	\textit{Счмв}=\frac{\textit{Цк}}{\textit{Ссл}\times 246\times \textit{Вэд}}+\textit{РЭ}
 \end{equation}
-где $\text{Ц}_\text{ро}$ – цена рабочего окружения (покупная цена программного и аппаратного обеспечения), руб;\par
+где $\textit{Ц}_\textit{ро}$ – цена рабочего окружения (покупная цена программного и аппаратного обеспечения), руб;\par
 Ссл – срок службы компьютера, лет;\par
 Вэд – время эксплуатации ЭВМ в день, час;\par
 Рэ – эксплуатационные расходы, руб./час.\par
 Покупная цена программного и аппаратного обеспечения составляет сумму цены компьютера, цены операционной системы и цены среды разработки:
 \begin{equation}
-	\text{Ц}_\text{ро} = \text{Ц}_\text{к}+\text{Ц}_\text{OS}+\text{Ц}_\text{ср}
+	\textit{Ц}_\textit{ро} = \textit{Ц}_\textit{к}+\textit{Ц}_\textit{OS}+\textit{Ц}_\textit{ср}
 \end{equation}
-где $\text{Ц}_\text{ро}$ – цена рабочего окружения;\par
-$\text{Ц}_\text{к}$ – цена компьютера с учетом всех комплектующих (35000 руб.);\par
-$\text{Ц}_\text{OS}$ – цена операционной системы (9000 руб.);\par
-$\text{Ц}_\text{ср}$ – цена среды разработки (840 руб. в месяц $\times$ 3 месяца = 2520 руб.).\par
+где $\textit{Ц}_\textit{ро}$ – цена рабочего окружения;\par
+$\textit{Ц}_\textit{к}$ – цена компьютера с учетом всех комплектующих (35000 руб.);\par
+$\textit{Ц}_\textit{OS}$ – цена операционной системы (9000 руб.);\par
+$\textit{Ц}_\textit{ср}$ – цена среды разработки (840 руб. в месяц $\times$ 3 месяца = 2520 руб.).\par
 Эксплуатационные расходы Pэ вычисляются по формуле:\par
 \begin{equation}
-	\text{Ц}_\text{ро} = 35000+9000+2520=46520
+	\textit{Ц}_\textit{ро} = 35000+9000+2520=46520
 \end{equation}
 \begin{equation}
 \label{form8}
-	\text{Рэ}=\text{Сэ}\times \text{Р}=4\times 0.3\approx 1.2 \text{ руб./час}
+	\textit{Рэ}=\textit{Сэ}\times \textit{Р}=4\times 0.3\approx 1.2 \textit{ руб./час}
 \end{equation}
 где Сэ – стоимость 1кВт$\times$ч электроэнергии, руб./кВт$\times$ч;\par
 Р – суммарная потребляемая мощность вычислительной системы, кВт.\par
 Рассчитаем стоимость одного часа машинного времени:\par
 \begin{equation}
 \label{form9}
-	\text{Счмв}=\frac{46520}{8\times 246\times 3}+1.2 = 9,07\text{ руб./час}
+	\textit{Счмв}=\frac{46520}{8\times 246\times 3}+1.2 = 9,07\textit{ руб./час}
 \end{equation}\par
 Возьмем среднее значение рабочих дней в месяц (21 день), время работы вычислительной машины равно 21$\times$3 = 63 (дня), то есть в часах время использования ЭВМ составит:\par
 \begin{equation}
 \label{form10}
-	\text{ВРм}=63\times 8=288\text{ (ч.)}
+	\textit{ВРм}=63\times 8=288\textit{ (ч.)}
 \end{equation}
 Следовательно, можно найти расходы на машинное время:
 \begin{equation}
 \label{form11}
-	\text{Мвр}=\text{Счмв}\times\text{ВРм}=9,07\times 288 = 2612,16\text{ (руб.)}
+	\textit{Мвр}=\textit{Счмв}\times\textit{ВРм}=9,07\times 288 = 2612,16\textit{ (руб.)}
 \end{equation}
 \subsubsection{Накладные расходы}
 В накладных расходах учитываются расходы на управление, коммунальные услуги, аренду помещения. Величина накладных расходов определяется в процентах от основной заработной платы, составляет 30\%, т.е. 14850 рублей:
 \begin{equation}
 \label{form12}
-	\text{Р}_\text{Н}=49500\times 0,3=14850\text{ (руб.)}
+	\textit{Р}_\textit{Н}=49500\times 0,3=14850\textit{ (руб.)}
 \end{equation}
 
 \subsubsection{Прочие затраты}
@@ -788,15 +825,14 @@ $\text{Ц}_\text{ср}$ – цена среды разработки (840 руб
 При расчете суммы общих затрат будем исходить из того, что командировочные расходы и расходы на рекламу отсутствуют, а величина коммерческих расходов составляет 2,5\% от производственной себестоимости программного продукта:
 \begin{equation}
 \label{form13}
-	\text{ПР}=(\text{МЗ}+\text{ОЗП}+\text{О}_\text{есн}+\text{Мвр}+\text{Р}_\text{Н})\times 0,025
+	\textit{ПР}=(\textit{МЗ}+\textit{ОЗП}+\textit{О}_\textit{есн}+\textit{Мвр}+\textit{Р}_\textit{Н})\times 0,025
 \end{equation}
-$$\text{ПР}=(1650+49500+14850+2612,16+14850)\times 0,025=2086,55\text{ (руб.)}$$
+$$\textit{ПР}=(1650+49500+14850+2612,16+14850)\times 0,025=2086,55\textit{ (руб.)}$$
 
 \subsubsection{Определение себестоимости разрабатываемой подсистемы}
 Себестоимость разработки программного средства представляет собой сумму затрат по экономическим элементам, приведенным в таблице 1.\par
 \begin{table}[H]
-\caption{Экономические элементы для расчета $\text{П}_\text{себ}$}
-\centering
+\caption{Экономические элементы для расчета $\textit{П}_\textit{себ}$}
   \begin{tabular}{|c|c|}
   \hline
   Затраты & Сумма, руб. \\\hline
@@ -818,7 +854,6 @@ $$\text{ПР}=(1650+49500+14850+2612,16+14850)\times 0,025=2086,55\text{ (руб
 Разрабатываемая подсистема попадает в следующую версию программного комплекса «Web-Исполнения бюджета». На данный момент заказ на неё оформлен 8 заказчиками:\par
 \begin{table}[H]
 \caption{Заказчики, согласившиеся включить в следющее обновление разработанную подсистему}
-\centering
   \begin{tabular}{|c|c|}
   \hline
   № & Наименование \\\hline
@@ -836,38 +871,38 @@ $$\text{ПР}=(1650+49500+14850+2612,16+14850)\times 0,025=2086,55\text{ (руб
 Расчет прибыли от продажи одной копии подсистемы осуществляется по следующей формуле:
 \begin{equation}
 \label{form13}
-	\text{П}_\text{ед}=\text{Ц}-\text{НДС}-\frac{\text{З}_\text{р}}{N}
+	\textit{П}_\textit{ед}=\textit{Ц}-\textit{НДС}-\frac{\textit{З}_\textit{р}}{N}
 \end{equation}
-где $\text{П}_\text{ед}$ - прибыли от продажи одной копии;\par
-$\text{Ц}$ - цена одной копии;\par
-$\text{НДС}$ - налог на добавленную стоимость;\par
-$\text{З}_\text{р}$ - затраты на реализацию;\par
+где $\textit{П}_\textit{ед}$ - прибыли от продажи одной копии;\par
+$\textit{Ц}$ - цена одной копии;\par
+$\textit{НДС}$ - налог на добавленную стоимость;\par
+$\textit{З}_\textit{р}$ - затраты на реализацию;\par
 N - количество заказчиков.\par
 Цену одной копии возьмем примерно равно 20\% от себестоимости, что равно 17000 руб.
 Расчитаем НДС:
 \begin{equation}
 \label{form14}
-	\text{НДС}=\frac{\text{Ц}\times \text{\%НДС}}{100\%+18\%}=\frac{17000\times 18\%}{100\%+18\%}=2609,9 \text{ (руб.)}
+	\textit{НДС}=\frac{\textit{Ц}\times \textit{\%НДС}}{100\%+18\%}=\frac{17000\times 18\%}{100\%+18\%}=2609,9 \textit{ (руб.)}
 \end{equation}\par
 Расчитаем затраты на реализацию, которые составляют 10\% от себестоимости разработки:
 \begin{equation}
 \label{form15}
-	85548,71\times 0,1 = 8554,87 \text{ (руб.)}
+	85548,71\times 0,1 = 8554,87 \textit{ (руб.)}
 \end{equation}\par
 Таким образом прибыль от продажи одной копии будет составлять:
 \begin{equation}
 \label{form16}
-	\text{П}_\text{ед}=17000-2609,9-\frac{85548,71+8554,87}{8}=2627,15\text{ (руб.)}
+	\textit{П}_\textit{ед}=17000-2609,9-\frac{85548,71+8554,87}{8}=2627,15\textit{ (руб.)}
 \end{equation}
 Затраты на разработку и реализацию составляют 85548,71 и 8554,87 (руб.) соответственно. Доход от продажи одной копии подсистемы составляет:\par
 \begin{equation}
 \label{form17}
-	\text{Ц}-\text{\%НДС} = 17000-2609,9 = 14390,1 \text{ (руб.)}
+	\textit{Ц}-\textit{\%НДС} = 17000-2609,9 = 14390,1 \textit{ (руб.)}
 \end{equation}\par
 Рассчитаем количество копий, которые необходимо продать для окупаемости затрат:\par
 \begin{equation}
 \label{form18}
-	\frac{85548,71+8554,87}{14390,1}=7 \text{ (копий)}
+	\frac{85548,71+8554,87}{14390,1}=7 \textit{ (копий)}
 \end{equation}
 После 7 проданных заказчикам копий, дальнейшие продажи будут приносить прибыль.
 
@@ -881,19 +916,24 @@ N - количество заказчиков.\par
 \addcontentsline{toc}{section}{Список использованных источников}
 \begin{enumerate}
 \item Общее описание системы ООО НПО Криста [Электронный ресурс]: https://www.krista.ru/files/catalog/ (дата обращения: 12.05.2017)
+\item Sun Microsystems [Электронный ресурс]: http://java/sun/com/j2ee/ (дата обращения: 05.05.2017)
 \item Nicl Qi Zhu Data Visualization with D3.js.— PacktPub, 2013. - 332 c.
 \item Ved Antani Mastering JavaScript.— President, MindView, Inc., 2016. - 250 с.
 \item Bruce Eckel Thinking in Java, 4th ed.— President, MindView, Inc., 2006. - 1150 с.
 \item Scott Murray Interactive Data Visualization for the Web.— O'Reilly Media, 2013. - 272 с.
+\item Курс лекции по ООП. Учебное пособие. – Рыбинск: РГАТА, 2008. – 88 с.
+\item Буч Г., Рамбо Д., Джекобсон А. – Язык UML. Руководство пользователя. – М.: ДМК, 2000. – 432 с.
+\item Кустова Т.Н., Коновал О.В. Методические рекомендации по технико- экономическому обоснованию дипломных работ студентов специальности 220400 программное обеспечение вычислительной техники и автоматизированных систем. Учебно-методическое пособие. – Рыбинск: РГАТА, 2003. – 39 с.
 \end{enumerate}
 
 \newpage
 \section*{Приложение А.Исходный код}
 \addcontentsline{toc}{section}{Приложение А.Исходный код}
-\lstinputlisting[language=Java]{ReportForm.java}
-\lstinputlisting[language=Java]{ctrlD3Report.js}
+% \lstinputlisting[language=Java]{ReportForm.java}
+% \lstinputlisting[language=Java]{ctrlD3Report.js}
 
 \end{document} % Конец текста.
+
 
 
 
